syntax = "proto3";

package Throneteki.WebService;

service UserService {
	rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
}

message GetUserByUsernameRequest {
	string Username = 1;
}

message GetUserByUsernameResponse {
	ThronetekiUser User = 1;
}

message ThronetekiUser {
	string Id = 1;
	string Username = 2;
	string Avatar = 3;
}